# AgentOrg

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.overnight/: handoff.md
config/: economics.json  openclaw.json  progression.json
dashboards/: index.html
development/projects/md2pdf/: .gitignore  CHANGELOG.md  README.md  components.py  md2pdf.py  pyproject.toml  typst_converter.py
development/projects/md2pdf/.github/workflows/: ci.yml
development/projects/md2pdf/css/: base.css  components.css  print.css  variables.css
development/projects/md2pdf/css/themes/: dark.css  default.css  minimal.css
development/projects/md2pdf/examples/: charts-test.md  sample.md
development/projects/md2pdf/templates/: base.html
development/projects/md2pdf/tests/: test_components.py  test_front_matter.py  test_typst_converter.py
development/projects/md2pdf/typst/: charts.typ  colors.typ  components.typ  cover.typ  template.typ
knowledge/: briefing-state.json  decisions.json  founder-profile.json  human-tasks.json  insights.json  lessons.json  onboarding-state.json  phase-state.json
scripts/: apply-template.py  apply-template.sh  backup.sh  enable-channel.py  enable-channel.sh  generate-dashboard.py  generate-dashboard.sh  health-check.sh  phase-transition.py  phase-transition.sh  public-readiness-check  setup.sh  simulate-onboarding.py  simulate-onboarding.sh
smoke/: 1-founder-dashboard.test.sh  10-knowledge-propagation.test.sh  (+9 more)
(+105 files in other folders)
