[project]
name = "md2pdf"
version = "1.0.0"
description = "Markdown to professional PDF with a design system — dual-engine support (WeasyPrint + Typst)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "markdown>=3.4",
    "jinja2>=3.1",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
md2pdf = "md2pdf:cli"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
